@@ -1,3 +1,4 @@
+2021-12-14 Version 1.2.0: Added the --name option to show the machine name
 2021-11-10 Version 1.1.1: Only list available MS updates in verbose mode
 2021-06-11 Version 1.1.0: Support for Adobe products
 2021-03-11 Version 1.0.0: Initial Release
